--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   roundcheckbox: ^2.0.5
   url_launcher: ^6.3.0
   onboarding_animation: ^0.0.3
+  lottie: any
+  badges: ^3.1.2
 
   # Icons
   iconsax: ^0.0.8
@@ -66,6 +68,7 @@ flutter:
     - assets/images/
     - assets/svgs/
     - assets/
+    - assets/animations/
 
   # ------------------- LOCAL FONTS -----------------#
   fonts:
